style.css
html {
	width: 100%;
	height: 100%;
}

body {
	overflow-x: hidden;
	margin: 0px;
	width: 100%;
	height: 100%;
}

@media (prefers-color-scheme: light) {
	body {
		background: SeaShell;
		color: black;
	}
}


@media (prefers-color-scheme: dark) {
	body {
		background: SeaShell;
		color: black;
	}
}

/* @media (prefers-color-scheme: dark) {
	body {
		background: #000;
		color: white;
	}
	a:link {
		color: #00ff00;
		background-color: transparent;
	}
	a:visited {
		color: #00DD00;
		background-color: transparent;
	}
	a:hover {
		color: red;
		background-color: transparent;
		text-decoration: underline;
	}
	a:active {
		color: yellow;
		background-color: transparent;
		text-decoration: underline;
	}
} */

